fix: toggle visibility of departure list based on train station city code

--- a/popup/styles.css
+++ b/popup/styles.css
@@ -13,6 +13,7 @@ html {
   text-shadow: 1px 1px black;
 }
 #list-departures {
+  display: none;
   margin: auto;
   border-collapse: collapse;
 }
